# PyDummies

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/devdummies/: version.py
src/devdummies/core/: __init__.py  bus.py  clock.py  container.py  featureflags.py  http.py  ids.py  mail.py  payments.py  rng.py  secrets.py  sms.py  spy.py  storage.py
src/devdummies/emulators/: __init__.py  http_asgi.py  s3_like.py  smtp_capture.py
src/devdummies/fakes/: __init__.py  blob_fs.py  bus_memory.py  flags_memory.py  kv_memory.py  mail_memory.py  payments_memory.py  queue_memory.py  secrets_memory.py  sms_memory.py
src/devdummies/pytest_plugin/: plugin.py
src/devdummies/stubs/: __init__.py  http_stub.py  payments_stub.py
tests/: test_blob_fs.py  test_clock.py  test_http_stub.py  test_ids.py  test_kv.py  test_mailer.py  test_s3_like.py
